--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,5 @@
 body,html {margin:0;padding:0;}
 #genPathButton{float:right;}
 .buttonPads{padding: 5px 5px 5px 5px; margin : 5px 5px 5px 5px;}
+#scoreboard {height:50px; width:100%;}
+#gameclock{width:100%; margin-left: 15px;margin-top:5px;font-famil:tahoma;font-size: 20pt;}
